# caracal

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  build-gpu.sh  cudalist.sh  makefile  pyproject.toml  run-gpu.sh  run-gpu.sh.old  test-gpu.sh
.github/workflows/: test.yml
.virtual_documents/examples/: Untitled.ipynb
caracal/: __init__.py  analysis.py  api.py  config.py  core.py  data.py  exceptions.py  explainers.py  loggers.py  memory.py  plotting.py  runners.py  settings.py  tuning.py  utils.py
examples/: caracal_ex_1.ipynb  caracal_ex_2.ipynb  caracal_ex_3.ipynb  mlflow_integration_examples.py
scripts/: benchmark.py  profile_memory.py  validate_imports.py  validate_installation.py
tests/: test_analysis.py  test_api.py  test_config.py  test_core.py  test_data.py  test_exceptions.py  test_integration.py  test_memory.py  test_plotting.py  test_runners.py  test_utils.py
