[tool.poetry]
name = "caracal"
version = "0.0.1"
description = "Caracal: Computational Analysis of Run And Convergence Algorithms Library"
authors = ["Stephen Kizlik <stephen.kizlik@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"  # needed for TF GPU env
numpy = "*"
pandas = "*"
scikit-learn = "*"
scipy = "*"
hyperopt = "*"

[tool.poetry.group.dev.dependencies]
matplotlib = "*"
seaborn = "*"
jupyterlab = "*"
pytest = "*"

[tool.poetry.group.ml.dependencies]
tensorflow = ">=2.16.0"
keras = ">=2.16.0"
mlflow = "*"
shap = "*"
hyperopt = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
